syntax = "proto3";

package todoPackage;

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}

message voidNoParam {

}

service Todo {
    rpc createTodo(TodoItem) returns (TodoItem);
    rpc getTodos(voidNoParam) returns (TodoItems);
}